add additional left menu

--- a/www/app/layout/menu-layout.html
+++ b/www/app/layout/menu-layout.html
@@ -13,6 +13,8 @@
 	    <ion-content class="has-header">
 	    	<ion-list>
 	    		<ion-item nav-clear menu-close>Home</ion-item>	
+	    		<ion-item nav-clear menu-close>Schedule</ion-item>
+	    		<ion-item nav-clear menu-close>Roster</ion-item>
 	    		<ion-item nav-clear menu-close>Teams</ion-item>	
 	    		<ion-item nav-clear menu-close>Standings</ion-item>	
 	    		<ion-item nav-clear menu-close>Locations</ion-item>	
