added right menu options for future hook-up

--- a/www/app/layout/menu-layout.html
+++ b/www/app/layout/menu-layout.html
@@ -1,7 +1,7 @@
 <ion-side-menus>
   	<ion-pane ion-side-menu-content>
   		<ion-nav-bar class="bar-dark">
-  			<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+  			<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>  			
   		</ion-nav-bar>
   		<ion-view></ion-view>
   	</ion-pane ion-side-menu-content> 
@@ -22,5 +22,22 @@
 	    		<ion-item nav-clear menu-close>Rules</ion-item>	
 	    	</ion-list>
 	    </ion-content>
-</ion-side-menu>
+	</ion-side-menu>
+
+	<ion-side-menu side="right">
+		<header class="bar bar-header bar-dark">
+	    	<h1 class="title">User FootyBoard</h1>
+	    </header>
+	    <ion-content class="has-header">
+	    	<ion-list>
+	    		<ion-item nav-clear menu-close>Home</ion-item>	
+	    		<ion-item nav-clear menu-close>Schedule</ion-item>
+	    		<ion-item nav-clear menu-close>Roster</ion-item>
+	    		<ion-item nav-clear menu-close>Photos</ion-item>	
+	    		<ion-item nav-clear menu-close>Stats</ion-item>	
+	    		<ion-item nav-clear menu-close>Prefernces</ion-item>	
+	    		<ion-item nav-clear menu-close>History</ion-item>	
+	    	</ion-list>
+	    </ion-content>
+	</ion-side-menu>
 </ion-side-menus>
