--- a/www/app/layout/menu-layout.html
+++ b/www/app/layout/menu-layout.html
@@ -3,7 +3,7 @@
   		<ion-nav-bar class="bar-dark">
   			<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>  			
   		</ion-nav-bar>
-  		<ion-view></ion-view>
+  		<ion-nav-view name="mainContent"></ion-nav-view>
   	</ion-pane ion-side-menu-content> 
 
 	<ion-side-menu side="left">
