added screens, routes and left menu mappings

--- a/www/app/layout/menu-layout.html
+++ b/www/app/layout/menu-layout.html
@@ -12,13 +12,14 @@
 	    </header>
 	    <ion-content class="has-header">
 	    	<ion-list>
-	    		<ion-item nav-clear menu-close>Home</ion-item>	
-	    		<ion-item nav-clear menu-close>Schedule</ion-item>
-	    		<ion-item nav-clear menu-close>Teams</ion-item>	
-	    		<ion-item nav-clear menu-close>Standings</ion-item>	
-	    		<ion-item nav-clear menu-close>Locations</ion-item>	
-	    		<ion-item nav-clear menu-close>Drills</ion-item>	
-	    		<ion-item nav-clear menu-close>Rules</ion-item>	
+	    		<ion-item nav-clear menu-close ui-sref="home.leagues">Home</ion-item>	
+	    		<ion-item nav-clear menu-close ui-sref="app.schedule">Schedule</ion-item>
+	    		<ion-item nav-clear menu-close ui-sref="app.teams">Teams</ion-item>	
+	    		<ion-item nav-clear menu-close ui-sref="app.standings">Standings</ion-item>	
+	    		<ion-item nav-clear menu-close ui-sref="app.locations">Locations</ion-item>	
+	    		<ion-item nav-clear menu-close ui-sref="app.registration">Registration</ion-item>
+	    		<ion-item nav-clear menu-close ui-sref="app.drils">Drills</ion-item>	
+	    		<ion-item nav-clear menu-close ui-sref="app.rules">Rules</ion-item>	
 	    	</ion-list>
 	    </ion-content>
 	</ion-side-menu>
