--- a/www/app/layout/menu-layout.html
+++ b/www/app/layout/menu-layout.html
@@ -1,9 +1,10 @@
 <ion-side-menus>
   	<ion-pane ion-side-menu-content>
   		<ion-nav-bar class="bar-dark">
+  			<ion-nav-back-button class="button-clear button-icon icon ion-ios7-arrow-back"></ion-nav-back-button> 
   			<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>  			
   		</ion-nav-bar>
-  		<ion-nav-view name="mainContent"></ion-nav-view>
+  		<ion-nav-view name="mainContent" animation="slide-left-right"></ion-nav-view>
   	</ion-pane ion-side-menu-content> 
 
 	<ion-side-menu side="left">
