--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,34 @@
 /* Empty. Add your own CSS if you like */
 
 /* Angular Google Maps */
+
+map {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.scroll {
+  height: 100%;
+}
+
 .angular-google-map-container { height: 500px; }
+
+.angular-google-map {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.marker-labels {
+    color: red;
+    background-color: white;
+    font-family: "Lucida Grande", "Arial", sans-serif;
+    font-size: 10px;
+    font-weight: bold;
+    text-align: center;
+    border: 1px solid black;
+    white-space: nowrap;
+    padding-left: 3px;
+    padding-right: 3px;
+}
